platform/infrastructure/kubernetes/loki.yaml
# yaml-language-server: $schema=kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: platform
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: loki
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-data
              mountPath: /tmp/loki
      volumes:
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: platform
spec:
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app: loki
