platform/infrastructure/kubernetes/otelcol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcol
  namespace: platform
  labels:
    app: otelcol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otelcol
  template:
    metadata:
      labels:
        app: otelcol
    spec:
      serviceAccountName: otel-collector
      containers:
        - name: otelcol
          image: otelcol-contrib
          imagePullPolicy: IfNotPresent
          ports:
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
            - name: fluentforward
              containerPort: 24224
---
apiVersion: v1
kind: Service
metadata:
  name: otelcol
  namespace: platform
spec:
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: fluentforward
      port: 24224
      targetPort: 24224
  selector:
    app: otelcol
