platform/infrastructure/kubernetes/prometheus.yaml
# yaml-language-server: $schema=kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: platform
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.54.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: platform
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
