platform/infrastructure/kubernetes/headlamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: platform
  labels:
    app: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
    spec:
      serviceAccountName: headlamp
      containers:
        - name: headlamp
          image: headlamp
          imagePullPolicy: IfNotPresent
          args:
            - '-kubeconfig=/home/headlamp/.kube/config'
            - '-in-cluster'
          ports:
            - containerPort: 4466
---
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: platform
spec:
  ports:
    - port: 80
      targetPort: 4466
  selector:
    app: headlamp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: platform
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.local.tupynambalucas.dev
      secretName: local-tls-secret
  rules:
    - host: headlamp.local.tupynambalucas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
