platform/infrastructure/kubernetes/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: platform
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - --log.level=DEBUG
            - --api.dashboard=true
            - --api.insecure=true
            - --providers.kubernetesingress=true
            - --entrypoints.traefik.address=:8082
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.mcp.address=:8080
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: mcp
              containerPort: 8080
            - name: admin
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: platform
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
    - name: mcp
      port: 8080
      targetPort: 8080
    - name: admin
      port: 8082
      targetPort: 8082
  selector:
    app: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: platform
spec:
  ingressClassName: traefik
  rules:
    - host: traefik-dev.tupynambalucas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8082
